use superscript for 21st century

--- a/WSSSPE3/report/wg_main_funding_spec_expert.tex
+++ b/WSSSPE3/report/wg_main_funding_spec_expert.tex
@@ -7,7 +7,8 @@
 
 Research Software Engineers (RSEs) -- those who contribute to science and
 scholarship through software development -- are an important part of the team
-needed to deliver 21st century research. However, existing academic structures
+needed to deliver 21\textsuperscript{st} century research. However, existing
+academic structures
 and systems of funding do not effectively fund and sustain these skills. The
 resulting high levels of turnover and inappropriate incentives are significant
 contributing factors to low levels of reliability and readability observed in
